Decky Loader API v2

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ pids
 logs
 results
 tmp
+bin
 
 # Coverage reports
 coverage
@@ -22,6 +23,7 @@ coverage
 # Dependency directory
 node_modules
 bower_components
+.pnpm-store
 
 # Editors
 .idea
@@ -39,10 +41,18 @@ __pycache__/
 /.yalc
 yalc.lock
 
-.vscode
-.rollup.cache
-dist.
-
+.vscode/settings.json
 
 # Ignore output folder
 backend/out
+
+# Make sure to ignore any instance of the loader's decky_plugin.py
+decky_plugin.py
+
+# Ignore decky CLI for building plugins
+out
+out/*
+cli/
+cli/*
+cli/decky
+cli/decky-linux-x86_64
