--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "decky-trophies",
-  "version": "1.0.0",
-  "description": "Display your achievement trophies on home, library and game pages",
+  "version": "1.0.1",
+  "description": "Display your achievements trophies on home, library and game pages. Trophies are based on the percentage of unlocked achievements per game.",
+  "type": "module",
   "scripts": {
-    "build": "shx rm -rf dist && rollup -c",
+    "build": "rollup -c",
     "watch": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,43 +13,35 @@
     "url": "git+https://github.com/ifantom/decky-trophies.git"
   },
   "keywords": [
-    "decky",
-    "plugin",
     "steam-deck",
-    "deck",
+    "decky-loader",
+    "plugin",
     "achievements",
     "trophies"
   ],
-  "author": "ifantom",
-  "license": "GPL-2.0-or-later",
+  "author": "Vlad S. (ifantom) <ifantom.group@gmail.com>",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/ifantom/decky-trophies/issues"
   },
   "homepage": "https://github.com/ifantom/decky-trophies",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^9.0.2",
-    "@types/react": "16.14.0",
-    "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
-    "rollup": "^2.79.1",
-    "rollup-plugin-import-assets": "^1.1.1",
-    "rollup-plugin-import-css": "^3.3.5",
-    "shx": "^0.3.4",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "@decky/rollup": "^1.0.1",
+    "@decky/ui": "^4.8.1",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/webpack": "^5.28.5",
+    "prettier": "^3.3.3",
+    "rollup": "^4.22.5",
+    "rollup-plugin-import-css": "^3.5.6",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "decky-frontend-lib": "^3.24.1",
-    "react-icons": "^4.12.0"
+    "@decky/api": "^1.1.2",
+    "localforage": "^1.10.0",
+    "react-icons": "^5.3.0",
+    "react-router": "^6.27.0",
+    "tslib": "^2.7.0"
   },
   "pnpm": {
     "peerDependencyRules": {
